syntax = "proto3";

package hvxahv.v1alpha1.proto;
option go_package = "github.com/hvxahv/gateway/api/channel/v1alpha";


service Channel {
  rpc CreateChannel(CreateChannelRequest) returns (CreateChannelResponse) {}
  rpc GetChannelsByAccountID(GetChannelsByAccountIDRequest) returns (GetChannelsByAccountIDResponse) {}
  rpc DeleteChannel(DeleteChannelRequest) returns (DeleteChannelResponse) {}
  rpc DeleteAllChannelsByAccountID(DeleteAllChannelsByAccountIDRequest) returns (DeleteAllChannelsByAccountIDResponse) {}
}

message CreateChannelRequest {
  string preferredUsername = 1;
  string account_id = 2;
}

message CreateChannelResponse {
  string code = 1;
  string reply = 2;
}

message GetChannelsByAccountIDRequest {
  string account_id = 1;
}
message ChannelData {
    string id = 1;
    string channel_id = 2;
}
message GetChannelsByAccountIDResponse {
  string code = 1;
  repeated ChannelData channels = 2;
}


message DeleteChannelRequest {
  string account_id = 1;
  string channel_id = 2;
}

message DeleteChannelResponse {
  string code = 1;
  string reply = 2;
}

message DeleteAllChannelsByAccountIDRequest {
  string account_id = 1;
}

message DeleteAllChannelsByAccountIDResponse {
  string code = 1;
  string reply = 2;
}